- "units" from moonraker API - menu page moonraker "sensors"

--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -122,6 +122,12 @@ icon: shutdown
 panel: power
 enable: {{ printer.power_devices.count > 0 }}
 
+[menu __main actions sensors]
+name: {{ gettext('Sensors') }}
+icon: info
+panel: moon_sensors
+enable: {{ moonraker.moon_sensors.count > 0 }}
+
 [menu __main actions disablemotors]
 name: {{ gettext('Disable Motors') }}
 icon: motor-off
@@ -231,6 +237,12 @@ icon: shutdown
 panel: power
 enable: {{ printer.power_devices.count > 0 }}
 
+[menu __print sensors]
+name: {{ gettext('Sensors') }}
+icon: info
+panel: moon_sensors
+enable: {{ moonraker.moon_sensors.count > 0 }}
+
 [menu __print macros]
 name: {{ gettext('Macros') }}
 icon: custom-script
@@ -278,6 +290,12 @@ name: {{ gettext('Power') }}
 icon: shutdown
 panel: power
 enable: {{ printer.power_devices.count > 0 }}
+
+[menu __splashscreen sensors]
+name: {{ gettext('Sensors') }}
+icon: info
+panel: moon_sensors
+enable: {{ moonraker.moon_sensors.count > 0 }}
 
 [menu __splashscreen network]
 name: {{ gettext('Network') }}
